@@ -35,6 +35,7 @@ our $makedirs;
 our $limitre;
 our $forcebundle;
 our $fallback;
+our $workerThreads = 0;
 
 # Hidden parameter for debugging
 our $snmpdebug = 0;
@@ -66,12 +67,15 @@ my $ok = GetOptions(
                     'limit=s'     => \$limitre,
                     'forcebundle' => \$forcebundle,
                     'fallback=i'  => \$fallback,
+                    'threads=i'   => \$workerThreads,
                     'snmpdebug'   => \$snmpdebug,
                     'verbose'     => \$verbose,
                     'debug'       => \$debug
                     );
 
-if( not $ok or not $infile or scalar( @ARGV ) > 0 )
+if( not $ok or not $infile or
+    ($workerThreads > 0 and not $Torrus::Global::threadsEnabled ) or
+    scalar( @ARGV ) > 0 )
 {
     print STDERR "Usage: $0 --in=filename.ddx options...\n",
     "Options:\n",
@@ -80,11 +84,16 @@ if( not $ok or not $infile or scalar( @ARGV ) > 0 )
     " --limit=regexp          limit the discovery by output files\n",
     " --forcebundle           always write the bundle file\n",
     " --fallback=integer      maximum age of XML file to fall back to\n",
+    " --threads=integer       number of parallel discovery threads\n",
     " --verbose               print extra information\n",
     " --debug                 print debugging information\n",
     " --snmpdebug             print SNMP protocol details\n",
-    "\n",
-    "Input file may be generated by genddx utility\n";
+    "\n";
+    if( not $Torrus::Global::threadsEnabled )
+    {
+        print STDERR "Multithreading is NOT SUPPORTED by current " .
+            "perl interpreter\n";
+    }
 
     exit 1;
 }
@@ -155,12 +164,14 @@ if( $root->nodeName() ne 'snmp-discovery' )
 }
 
 
-my $everythingsOk = 1;
+our $everythingsOk = 1;
 
-my $globalParams = parseParams( $root );
+our $globalParams = parseParams( $root );
 
-my $perOutfileHostParams = {};
-my %outputBundles;
+our $perOutfileHostParams = {};
+our %outputBundles;
+
+# Parse the body of the XML
 
 foreach my $hostNode ( $root->getChildrenByTagName('host') )
 {
@@ -190,114 +201,75 @@ undef $root;
 undef $doc;
 undef $parser;
 
+# Start discovery
+our $jobQueue;
+our $bundleDeletionQueue;
 
-foreach my $outfile ( sort keys %{$perOutfileHostParams} )
+if( $workerThreads > 1 and $Torrus::Global::threadsEnabled )
 {
-    if( defined( $limitre ) )
-    {
-        my $filename = $outfile;
-        $filename =~ s/^.*\///;
+    require threads;
+    require threads::shared;
+    require Thread::Queue;
 
-        if( $filename !~ $limitre )
+    threads::shared::share( \$everythingsOk );
+
+    $jobQueue = new Thread::Queue;
+    $bundleDeletionQueue = new Thread::Queue;
+
+    # Enqueue the output filenames    
+    foreach my $outfile ( sort keys %{$perOutfileHostParams} )
+    {
+        if( not matchLimitRe( $outfile ) )
         {
             next;
         }
+
+        $jobQueue->enqueue( $outfile );
     }
+
+    # Start the worker threads
+    my @workers;
+    foreach my $i ( 1..$workerThreads )
+    {
+        push( @workers, threads->create( \&discoveryThread ) );
+    }
+
+    # Wait for workers to finish the jobs
+    foreach my $thr ( @workers )
+    {
+        $thr->join();
+    }
+
+    # Process the files to be excluded from bundles
+
+    if( not $everythingsOk )
+    {
+        my $outfile;
+        while( defined( $outfile = $bundleDeletionQueue->dequeue_nb() ) )
+        {
+            removeFromBundle( $outfile );
+        }
+    }
+}
+else
+{
+    # Single-thread operation
+       
+    foreach my $outfile ( sort keys %{$perOutfileHostParams} )
+    {
+        if( not matchLimitRe( $outfile ) )
+        {
+            next;
+        }
         
-    Verbose('Preparing to write ' . $outfile);
-
-    my $dd = new Torrus::DevDiscover;
-
-    my $ok = 1;
-
-    foreach my $hostParams ( @{$perOutfileHostParams->{$outfile}} )
-    {
-        $ok = $dd->discover( $hostParams );
-
-        if( not $ok )
+        if( not doDiscover( $outfile ) )
         {
-            Error($outfile . ' was not written because of errors');
-            $everythingsOk = 0;
-            last;
-        }
-    }
-
-    if( $ok )
-    {
-        my $cb = new Torrus::ConfigBuilder;
-
-        $cb->addCreatorInfo( $creator );
-
-        $dd->buildConfig( $cb );
-        $cb->addRequiredFiles();
-        $cb->addStatistics();
-
-        $ok = $cb->toFile( $outfile );
-        if( $ok )
-        {
-            Verbose('Wrote ' . $outfile);
-        }
-        else
-        {
-            Error('Cannot write ' . $outfile . ': ' . $!);
-            $everythingsOk = 0;
-        }
-    }
-    else
-    {
-        my $removeFromBundle = 1;
-        
-        if( $forcebundle )
-        {
-            if( defined( $fallback ) and
-                -e $outfile and -M $outfile <= $fallback )
-            {               
-                Warn('Falling back to the old version of ' .
-                     relXmlFilename($outfile));
-                $removeFromBundle = 0;
-            }
-            $everythingsOk = 1;
-        }
-
-        if( $removeFromBundle )
-        {
-            foreach my $bundleName ( sort keys %outputBundles )
-            {
-                delete $outputBundles{$bundleName}{ relXmlFilename($outfile) };
-                Warn('Bundle ' . $bundleName . ' will not have ' .
-                     relXmlFilename($outfile) . ' included because of errors');
-            }
-        }
-    }
-
-    if( $makedirs )
-    {
-        if( $everythingsOk )
-        {
-            my ($login,$pass,$uid,$gid) = getpwnam('@torrus_user@')
-                or die "Cannot get user details for @torrus_user@";
-
-            foreach my $dir ( $dd->listDataDirs() )
-            {
-                if( not -d $dir )
-                {
-                    Debug('Creating directory: ' . $dir);
-                    mkdir( $dir ) or
-                        die('Cannot create directory: ' . $dir . ': ' . $!);
-                    chown( $uid, $gid, $dir ) or
-                        die('Cannot change ownership for ' . $dir . ': ' . $!);
-                    chmod( 02755, $dir ) or
-                        die('Cannot chmod 02755 for ' . $dir . ': ' . $!);
-                }
-            }
-        }
-        else
-        {
-            Error('Skipping mkdir because of errors');
+            removeFromBundle( $outfile );
         }
     }
 }
 
+# Discovery finished, do the bundles
 
 if( scalar( keys %outputBundles ) > 0 )
 {
@@ -462,6 +434,149 @@ sub relXmlFilename
     return $filename;
 }
 
+
+sub matchLimitRe
+{
+    my $filename = shift;
+
+    if( defined( $limitre ) )
+    {
+        $filename =~ s/^.*\///;
+
+        if( $filename !~ $limitre )
+        {
+            return 0;
+        }
+    }
+
+    return 1;
+}
+
+
+# Pick up next available outfile until the job queue is empty
+
+sub discoveryThread
+{
+    Torrus::Log::setTID( threads->tid() );
+    Debug('Started thread #' . threads->tid());
+    my $outfile;
+    while( defined( $outfile = $jobQueue->dequeue_nb() ))
+    {
+        if( not doDiscover( $outfile ) )
+        {
+            $bundleDeletionQueue->enqueue( $outfile );
+        }
+    }
+    Debug('Finished thread #' . threads->tid());
+}
+
+
+
+sub doDiscover
+{
+    my $outfile = shift;
+    
+    Verbose('Preparing to write ' . $outfile);
+
+    my $dd = new Torrus::DevDiscover;
+    my $ok = 1;
+
+    foreach my $hostParams ( @{$perOutfileHostParams->{$outfile}} )
+    {
+        $ok = $dd->discover( $hostParams );
+
+        if( not $ok )
+        {
+            Error($outfile . ' was not written because of errors');
+            $everythingsOk = 0;
+            last;
+        }
+    }
+
+    if( $ok )
+    {
+        my $cb = new Torrus::ConfigBuilder;
+
+        $cb->addCreatorInfo( $creator );
+
+        $dd->buildConfig( $cb );
+        $cb->addRequiredFiles();
+        $cb->addStatistics();
+
+        $ok = $cb->toFile( $outfile );
+        if( $ok )
+        {
+            Verbose('Wrote ' . $outfile);
+        }
+        else
+        {
+            Error('Cannot write ' . $outfile . ': ' . $!);
+            $everythingsOk = 0;
+        }
+    }
+
+    if( $makedirs )
+    {
+        if( $everythingsOk )
+        {
+            my ($login,$pass,$uid,$gid) = getpwnam('@torrus_user@')
+                or die "Cannot get user details for @torrus_user@";
+            
+            foreach my $dir ( $dd->listDataDirs() )
+            {
+                if( not -d $dir )
+                {
+                    Debug('Creating directory: ' . $dir);
+                    mkdir( $dir ) or
+                        Error('Cannot create directory: ' .
+                              $dir . ': ' . $!);
+                    chown( $uid, $gid, $dir ) or
+                        Error('Cannot change ownership for ' .
+                              $dir . ': ' . $!);
+                    chmod( 02755, $dir ) or
+                        Error('Cannot chmod 02755 for ' .
+                              $dir . ': ' . $!);
+                }
+            }
+        }
+        else
+        {
+            Error('Skipping mkdir because of errors');
+        }
+    }
+    
+    return $ok;
+}
+
+
+sub removeFromBundle
+{
+    my $outfile = shift;
+    
+    my $removeFromBundle = 1;
+        
+    if( $forcebundle )
+    {
+        if( defined( $fallback ) and
+            -e $outfile and -M $outfile <= $fallback )
+        {               
+            Warn('Falling back to the old version of ' .
+                 relXmlFilename($outfile));
+            $removeFromBundle = 0;
+        }
+        $everythingsOk = 1;
+    }
+
+    if( $removeFromBundle )
+    {
+        foreach my $bundleName ( sort keys %outputBundles )
+        {
+            delete $outputBundles{$bundleName}{ relXmlFilename($outfile) };
+            Warn('Bundle ' . $bundleName . ' will not have ' .
+                 relXmlFilename($outfile) . ' included because of errors');
+        }
+    }
+}
 
 # Local Variables:
 # mode: perl
